e2e/tests/all/snapshots/phone_field_rest_desktop.snap
---
source: e2e/src/suite.rs
description: phone_field at desktop (rest)
expression: tree
---
LabelText
  StaticText "Mobile"
button "Country: Germany, DE +49" [expanded=false] [haspopup=listbox]
  StaticText "DE"
  StaticText "+49"
status [atomic] [live=polite]
textbox "Mobile"
paragraph
