e2e/tests/all/snapshots/phone_field_rest_mobile.snap
---
source: e2e/src/suite.rs
description: phone_field at mobile (rest)
expression: tree
---
LabelText
  StaticText "Mobile"
button "Country: Germany, DE +49" [expanded=false] [haspopup=listbox]
  StaticText "DE"
  StaticText "+49"
status [atomic] [live=polite]
textbox "Mobile"
paragraph
