e2e/tests/all/snapshots/popover_open_desktop.snap
---
source: e2e/src/suite.rs
description: popover at desktop (open)
expression: tree
---
button "Popover" [expanded] [haspopup=dialog]
  StaticText "Popover"
paragraph
  StaticText "Nothing to focus here"
button "After"
  StaticText "After"
generic
  dialog "Example popover"
    paragraph
      StaticText "Popover content"
    button "Inside"
      StaticText "Inside"
      generic
