e2e/tests/all/snapshots/popover_open_mobile.snap
---
source: e2e/src/suite.rs
description: popover at mobile (open)
expression: tree
---
button "Popover" [expanded] [haspopup=dialog]
  StaticText "Popover"
paragraph
  StaticText "Nothing to focus here"
button "After"
  StaticText "After"
dialog "Example popover"
  paragraph
    StaticText "Popover content"
  button "Inside"
    StaticText "Inside"
