e2e/tests/all/snapshots/popover_rest_desktop.snap
---
source: e2e/src/suite.rs
description: popover at desktop (rest)
expression: tree
---
button "Popover" [expanded=false] [haspopup=dialog]
  StaticText "Popover"
paragraph
  StaticText "Nothing to focus here"
button "After"
  StaticText "After"
