e2e/tests/all/snapshots/progress_bar_rest_mobile.snap
---
source: e2e/src/suite.rs
description: progress_bar at mobile (rest)
expression: tree
---
paragraph
  StaticText "Upload"
progressbar "Upload" = 40 [valuemax=100] [valuemin=0]
button "Add 10%"
  StaticText "Add 10%"
paragraph
  StaticText "Sync"
progressbar "Sync" [valuemax=100] [valuemin=0]
progressbar "Sync, right to left" [valuemax=100] [valuemin=0]
