e2e/tests/all/snapshots/qr_code_rest_desktop.snap
---
source: e2e/src/suite.rs
description: qr_code at desktop (rest)
expression: tree
---
image "QR code linking to example.com"
