e2e/tests/all/snapshots/qr_code_rest_mobile.snap
---
source: e2e/src/suite.rs
description: qr_code at mobile (rest)
expression: tree
---
image "QR code linking to example.com"
